--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <main>
         <div class="main_container container">
             <div class="section_profile">
-                <img class="section_profile_foto" src="style/photo_2022-03-05_12-25-57.jpg" alt="my foto">
+                <img class="section_profile_foto" src="style/photo_2022-03-05_13-31-01.jpg" alt="my foto">
                 <div class="section_profile_title">
-                    <h1 class="main_title">Vitali Kazuro</h1>
+                    <h1 class="main_title">Vitaly Kazhuro</h1>
                     <h3 class="subtitle">Junior Front-End Developer</h3>
                 </div>
             </div>
@@ -127,7 +127,7 @@
         <div class="footer_container container">
             <div class="footer_item">
                 © 2022 
-                <a href="https://github.com/Krombaher" class="github">VITALI KAZURO</a>
+                <a href="https://github.com/Krombaher" class="github">VITALY KAZHURO</a>
             </div>
         </div>
     </footer>
